@@ -3,6 +3,9 @@
 	* pykickstart/commands/timezone.py:  The timezone command didn't
 	understand --isUtc before FC6 (#231189).
 
+	* pykickstart/parser.py (KickstartParser._stateMachine):  Recognize
+	%ksappend so ksvalidator works.
+
 2007-03-01  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/commands/bootloader.py, pykickstart/commands/clearpart.py,
